# ruida-protocol-analyzer

./: .gitignore  AGENTS.md  LICENSE  README.md  build.ps1  build.sh  capture  capture.ps1  cpa.py  cpa.spec  decode  github-release.ps1  github-release.sh  link  publish.ps1  publish.sh  pyproject.toml  rda.py  rda_emitter.py  release.ps1  release.sh  requirements.txt  round-trip  rpa.py  rpa.spec  rpa_emitter.py  rpa_plotter.py  rpa_protocol.py  ruida_analyzer.py  ruida_parser.py
.github/workflows/: release.yml
.opencode/: opencode.jsonc
cpa/: cpa_emitter.py  cpa_line.py  cpa_plotter.py  cpa_popup.py  rpa_emitter.py  rpa_plotter.py
cpalib/: bokeh_app.py  bokeh_plotter.py  bokeh_view.py  cpa_emitter.py  cpa_line.py  cpa_plotter.py  cpa_popup.py
discovery/: README.md
docs/: bokeh_migration.md
docs/api/: RdDriver-interface.md
docs/designs/: RuidaDriver-design.md  RuidaDriver-functional.md  RuidaDriver-test.md
docs/guides/: integration-guide.md  rpascript-guide.md  tui-guide.md
docs/plans/: MatplotlibToBokeh-plan.md  MatplotlibToBokeh-prompt.md  Packaging-plan.md  Savebutton-plan.md
protocols/ruida/: rpa_plotter.py  (+4 more)
rpalib/: app_adapter.py  bokeh_app.py  bokeh_plotter.py  bokeh_view.py  rd_binary_reader.py  rpa_emitter.py  rpa_line.py  rpa_swizzler.py  rpyc_service.py  ruida_transcoder.py
rpascript/: __init__.py  __main__.py  cli.py  encoding.py  generator.py  interpreter.py  rds_adapter.py  tui.py  tui_adapter.py
ruidadriver/: __init__.py  rd_session.py  rd_status.py  rd_transport.py  ruida_driver.py  transport_events.py
scripts/: gen-rpyc-certs.sh
(+16 files in other folders)
