[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ruida-protocol-analyzer"
version = "0.8.1"
description = "RPA Protocol Analyzer - Parse and decode Ruida protocol packets"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
authors = [
    {name = "Ruida Protocol Analyzer Contributors"}
]

[project.scripts]
rpa = "rpa:main"
rpa-script = "rpascript.tui:main"

[project.optional-dependencies]
plotting = ["bokeh"]
serial = ["pyserial"]

[tool.setuptools]
py-modules = ["rpa"]

[tool.setuptools.packages.find]
include = ["rpalib*", "protocols*", "rpascript*", "ruidadriver*"]
